--- a/.applatix/axscm_checkout.yaml
+++ b/.applatix/axscm_checkout.yaml
@@ -7,6 +7,7 @@ container:
   resources:
     mem_mib: 256
     cpu_cores: 0.1
+    disk_gb: 10
   image: get.applatix.io/applatix/axscm:v1
   docker_options: ''
   command: "axscm clone %%repo%% /src --commit %%commit%%"
