--- a/.applatix/c-example.yaml
+++ b/.applatix/c-example.yaml
@@ -8,7 +8,7 @@ container:
     mem_mib: 256
     cpu_cores: 0.1
     disk_gb: 0
-  image: "dinardalvi/alpine-c"
+  image: "hub.docker.com/r/dinardalvi/alpine-c/"
   docker_options: ""
   command: "%%CMD%%"
 inputs:
