--- a/.applatix/c-test.yaml
+++ b/.applatix/c-test.yaml
@@ -10,7 +10,7 @@ container:
     disk_gb: 0
   image: "golang:1.6"
   docker_options: ""
-  command: "sh -c 'cd /src && ls -ltr && go test -v'"
+  command: "sh -c 'cd /src && ls -ltr && ./hello"
 inputs:
   artifacts:
   - from: "%%code%%"
