--- a/.applatix/example-build.yaml
+++ b/.applatix/example-build.yaml
@@ -8,9 +8,9 @@ container:
     mem_mib: 256
     cpu_cores: 0.1
     disk_gb: 0
-  image: "golang:1.6"
+  image: "hub.docker.com/r/dinardalvi/alpine-c/"
   docker_options: ""
-  command: "sh -c 'cd /src && ls -ltr && go build main.go && sleep 5'"
+  command: "sh -c 'cd /src && ls -ltr && gcc -o hello hello.c && sleep 5'"
 inputs:
   artifacts:
   - from: "%%code%%"
