fixed issues in service templates

--- a/.applatix/c-test.yaml
+++ b/.applatix/c-test.yaml
@@ -1,7 +1,7 @@
 ---
 type: service_template
 subtype: container
-name: example-test
+name: c-test
 description: test example
 container:
   resources:
