--- a/.applatix/c-build.yaml
+++ b/.applatix/c-build.yaml
@@ -1,7 +1,7 @@
 ---
 type: service_template
 subtype: container
-name: example-build
+name: c-build
 description: build example
 container:
   resources:
