--- a/.applatix/axscm_checkout.yaml
+++ b/.applatix/axscm_checkout.yaml
@@ -8,9 +8,9 @@ container:
     mem_mib: 256
     cpu_cores: 0.1
     disk_gb: 10
-  image: hub.docker.com/r/dinardalvi/alpine-c/
+  image: get.applatix.io/applatix/axscm:v1
   docker_options: ''
-  command: "alpine-c clone %%repo%% /src --commit %%commit%%"
+  command: "axscm clone %%repo%% /src --commit %%commit%%"
 inputs:
   parameters:
     commit:
