--- a/.applatix/c-test.yaml
+++ b/.applatix/c-test.yaml
@@ -8,7 +8,7 @@ container:
     mem_mib: 256
     cpu_cores: 0.1
     disk_gb: 0
-  image: "golang:1.6"
+  image: "dinardalvi/alpine-c/"
   docker_options: ""
   command: "sh -c 'cd /src && ls -ltr && ./hello"
 inputs:
