--- a/.applatix/c-build.yaml
+++ b/.applatix/c-build.yaml
@@ -7,7 +7,7 @@ container:
   resources:
     mem_mib: 256
     cpu_cores: 0.1
-    disk_gb: 0
+    disk_gb: 10
   image: "dinardalvi/alpine-c"
   docker_options: ""
   command: "sh -c 'cd /src && ls -ltr && gcc -o hello hello.c && sleep 5'"
@@ -20,4 +20,4 @@ inputs:
 outputs:
   artifacts:
     binary:
-      path: "/src/main"
+      path: "/src/hello"
