--- a/.applatix/c-test.yaml
+++ b/.applatix/c-test.yaml
@@ -7,16 +7,14 @@ container:
   resources:
     mem_mib: 256
     cpu_cores: 0.1
-    disk_gb: 0
+    disk_gb: 10
   image: "dinardalvi/alpine-c/"
   docker_options: ""
-  command: "sh -c 'cd /src && ls -ltr && ./hello"
+  command: "sh -c 'cd /binaries && ls -ltr && ./hello"
 inputs:
   artifacts:
-  - from: "%%code%%"
-    path: "/src"
   - from: "%%binary%%"
-    path: "/src/main"
+    path: "/binaries/hello"
   parameters:
     code:
     binary:
