--- a/.applatix/c-test.yaml
+++ b/.applatix/c-test.yaml
@@ -8,13 +8,12 @@ container:
     mem_mib: 256
     cpu_cores: 0.1
     disk_gb: 10
-  image: "dinardalvi/alpine-c/"
+  image: "dinardalvi/alpine-c:latest"
   docker_options: ""
-  command: "sh -c 'cd /binaries && ls -ltr && ./hello"
+  command: "sh -c 'cd /src && ls -ltr && ./hello"
 inputs:
   artifacts:
   - from: "%%binary%%"
-    path: "/binaries/hello"
+    path: "/src"
   parameters:
-    code:
     binary:
