--- a/.applatix/c-build.yaml
+++ b/.applatix/c-build.yaml
@@ -10,7 +10,7 @@ container:
     disk_gb: 10
   image: "dinardalvi/alpine-c:latest"
   docker_options: ""
-  command: "sh -c 'cd /src && ls -ltr && gcc -o hello hello.c && sleep 5'"
+  command: "sh -c 'cd /src && ls -ltr && gcc -o hello hello.c && sleep 10 && ./hello'"
 inputs:
   artifacts:
   - from: "%%code%%"
