--- a/.applatix/c-build.yaml
+++ b/.applatix/c-build.yaml
@@ -21,3 +21,5 @@ outputs:
   artifacts:
     binary:
       path: "/src"
+  labels:
+    "ax_ea_docker_enable": "{ \"graph-storage-name\": \"devopsbuildstorage\", \"graph-storage-size\": \"10Gi\" }"
