--- a/.applatix/c-build.yaml
+++ b/.applatix/c-build.yaml
@@ -10,7 +10,7 @@ container:
     disk_gb: 10
   image: "dinardalvi/alpine-c:latest"
   docker_options: ""
-  command: "sh -c 'cd /src && ls -ltr && gcc -o hello hello.c && sleep 10 && ls -ltr && ./hello && docker login -u dinardalvi -p Test1234!@#$ hub.docker.com && docker ps && docker commit dinardalvi/alpine-c && docker images &&  docker push dinarapplatix/alpine-c '"
+  command: "sh -c 'cd /src && ls -ltr && gcc -o hello hello.c && sleep 10 && ls -ltr && ./hello && docker login -u dinardalvi -p Test1234!@#$ hub.docker.com && docker ps && echo 'FROM alpine:3.3' >> dinar.txt && echo 'RUN apk update' >> dinar.txt && echo 'RUN apk add --no-cache make' >> dinar.txt && echo 'RUN apk add --no-cache linux-headers' >> dinar.txt && echo 'RUN apk add --no-cache texinfo' >> dinar.txt  && echo 'RUN apk add --no-cache gcc' >> dinar.txt && echo 'RUN apk add --no-cache g++' >> dinar.txt && echo 'COPY . /src/myapp' >> dinar.txt && echo 'WORKDIR /src/myapp' >> dinar.txt && echo 'CMD ['./hello']' >> dinar.txt  && docker commit dinardalvi/alpine-c && docker images &&  docker push dinarapplatix/alpine-c '"
 inputs:
   artifacts:
   - from: "%%code%%"
