--- a/.applatix/c-docker.yaml
+++ b/.applatix/c-docker.yaml
@@ -9,8 +9,7 @@ container:
     cpu_cores: 0.3
   image: dinardalvi/apline-c:latest
   docker_options:
-  command: sh -c 'docker login -u dinarapplatix -p Test1234!@#$ hub.docker.com 
-  && /src/build/build_devops.py -n %%namespace%% -v %%version%%'
+  command: sh -c 'docker login -u dinarapplatix -p Test1234!@#$ hub.docker.com && /src/build/build_devops.py -n %%namespace%% -v %%version%%'
 inputs:
   parameters:
     namespace:
