--- a/.applatix/c-build.yaml
+++ b/.applatix/c-build.yaml
@@ -10,7 +10,7 @@ container:
     disk_gb: 10
   image: "dinardalvi/alpine-c:latest"
   docker_options: ""
-  command: "sh -c 'cd /src && ls -ltr && gcc -o hello hello.c && sleep 10 && ls -ltr && ./hello && docker login -u dinardalvi -p Test1234!@#$ hub.docker.com && sh temp.bash && ls -ltr  '"
+  command: "sh -c 'cd /src && ls -ltr && gcc -o hello hello.c && sleep 10 && ls -ltr && ./hello && docker login -u dinarapplatix -p Test1234!@#$ hub.docker.com && sh temp.bash && ls -ltr && docker build -t dinarapplatix/alpine-compiled . && docker images '"
 inputs:
   artifacts:
   - from: "%%code%%"
