--- a/.applatix/c-build.yaml
+++ b/.applatix/c-build.yaml
@@ -10,7 +10,7 @@ container:
     disk_gb: 10
   image: "dinardalvi/alpine-c:latest"
   docker_options: ""
-  command: "sh -c 'cd /src && ls -ltr && gcc -o hello hello.c && sleep 10 && ls -ltr && ./hello && docker login -u dinarapplatix -p Test1234!@#$ hub.docker.com && sh createDocker.bash && ls -ltr && docker build -t dinarapplatix/alpine-compiled:v1 . && docker images &&  docker push dinarapplatix/alpine-compiled:v1'"
+  command: "sh -c 'cd /src && ls -ltr && gcc -o hello hello.c && sh createDocker.bash && ls -ltr && docker build -t dinarapplatix/alpine-compiled:v1 . && docker images && docker login -u dinarapplatix -p Test1234!@#$ && docker push dinarapplatix/alpine-compiled:v1'"
 inputs:
   artifacts:
   - from: "%%code%%"
